# yoshi

./: .gitignore  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENSE  Makefile  NOTICE  PUBLISHING.md  README.md  SECURITY.md  ams.py  apply_corrections.rs  apply_println_fixes.py  cratecheck.py  debug_test.rs  fmg.py  requirements.txt  rust-toolchain.toml  test_exports.rs  test_yoshiautorust.rs  xIntegrations.txt  yoFixWhat.py  yoStrats.md  yoshi.code-workspace  yoshi && cargo check --workspace  zFinishHim.md
yoshi/: Cargo.toml  MIGRATION.md  README.md  fix_yopost_syntax.py
yoshi-analyzer/: Cargo.toml  README.md  yoshi_analysis_report.json
yoshi-analyzer/src/: lib.rs  main.rs
yoshi-analyzer/src/analyzers/: mod.rs  strategic_analyzer.rs
yoshi-analyzer/src/generators/: mod.rs  strategy_generator.rs
yoshi-analyzer/src/ml/: cache.rs  features.rs  metrics.rs  mod.rs  models.rs  training.rs
yoshi-benches/: Cargo.toml  README.md  expanded.rs
yoshi-benches/benches/: benches.txt  cross_crate_integration.rs  error_contest.rs  error_context.rs  error_conversion.rs  error_creation.rs  error_creation_backup.rs  error_creation_fixed.rs  error_formatting.rs  macro_expansion.rs  macro_performance.rs
yoshi-benches/examples/: comprehensive_error_analysis.rs  derive_macro_showcase.rs
yoshi-benches/real_analysis_reports/: real_comprehensive_analysis.txt
yoshi-benches/src/: comprehensive_comparison.rs  lib.rs
yoshi-benches/tests/: comprehensive_comparison.rs  integration_tests.rs  property_tests.rs  unit_tests.rs
yoshi-core/: Cargo.toml  README.md
yoshi-core/src/: lib.rs
yoshi-core/tests/: context_metadata_tests.rs  core_functionality_tests.rs  error_types_tests.rs  result_traits_tests.rs
yoshi-deluxe/: .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  STRATEGY_ADDITIONS_LOG.md  yoshi-deluxe.toml
yoshi-deluxe/src/: err.rs  lib.rs
yoshi-deluxe/src/ast/: mod.rs
yoshi-deluxe/src/codegen/: mod.rs
yoshi-deluxe/src/compiler_internals/: mod.rs
yoshi-deluxe/src/constants/: mod.rs
yoshi-deluxe/src/diagnostics/: mod.rs
yoshi-deluxe/src/docs/: mod.rs
yoshi-deluxe/src/errors/: mod.rs
yoshi-deluxe/src/metrics/: mod.rs
yoshi-deluxe/src/optimization/: detectors.rs
yoshi-deluxe/src/rust_analyzer_integration/: mod.rs
yoshi-deluxe/src/rustc_integration/: mod.rs
yoshi-deluxe/src/strategies/: error_correction.rs  flawless_clippy.rs
yoshi-deluxe/src/system/: mod.rs
yoshi-deluxe/src/types/: mod.rs
yoshi-deluxe/tests/: real_autocorrection_system.rs
yoshi-derive/: Cargo.toml  README.md
yoshi-derive/examples/: debug_yoshi_af.rs  yoshi_af_showcase.rs
yoshi-derive/src/: derive.txt  lib.rs
yoshi-derive/tests/: auto_correction_tests.rs  autofix_trigger_integration.rs  compilation_tests.rs  compile_fail_tests.rs  derive_test.rs  diagnostic_test.rs  error_handling_tests.rs  integration_test.rs  integration_tests.rs  simple_auto_correction_tests.rs  test_choice_a_solution.rs  test_runner.rs
yoshi-mcp/: .eslintrc.js  Cargo.toml  README.md  package.json  tsconfig.json  webpack.config.js
yoshi-mcp/docs/: Yoshi-SDS.md
yoshi-mcp/scripts/: build-wasm.bat  build-wasm.sh
yoshi-mcp/src/: error.rs  extension.ts  inference.rs  lib.rs  mcp.rs  model.rs  security.rs  wasm.rs
yoshi-mcp/src/config/: manager.ts
yoshi-mcp/src/mcp/: server.ts
yoshi-mcp/src/model/: manager.ts
yoshi-mcp/src/security/: manager.ts
yoshi-mcp/tests/: integration_tests.rs
yoshi-std/: Cargo.toml  OriginialStd.txt  README.md
yoshi-std/src/: lib-standard.rs.txt  lib.rs
yoshi-std/src/analytics/: mod.rs
yoshi-std/src/api/: async_utils.rs  mod.rs  tracing_integration.rs
yoshi-std/src/conversions/: mod.rs
yoshi-std/src/std_integration/: mod.rs
yoshi-std/tests/: advanced_features_tests.rs  backtrace_debug_tests.rs  integration_tests.rs  std_integration_tests.rs  test_missing_docs.rs
yoshi/backups/20250624_105818_combined_pre_fix/: auto_docs.rs
yoshi/backups/20250624_105821_combined_pre_fix/: flawless.rs
yoshi/backups/20250624_105823_combined_pre_fix/: mod.rs
yoshi/backups/20250624_105825_combined_pre_fix/: lib.rs  unclipped.rs
yoshi/backups/20250624_105826_combined_pre_fix/: main.rs
yoshi/backups/20250624_111222_combined_pre_fix/: backup_manager.rs
yoshi/backups/20250624_111223_combined_pre_fix/: mod.rs  no_std_compat.rs
yoshi/backups/20250624_111417_combined_pre_fix/: flawless copy.rs
yoshi/backups/20250624_111418_combined_pre_fix/: mod copy.rs
yoshi/backups/20250624_111419_combined_pre_fix/: unclipped.rs
yoshi/backups/20250624_111551_combined_pre_fix/: auto_docs.rs
yoshi/backups/20250624_111552_combined_pre_fix/: flawless.rs  mod.rs
yoshi/backups/20250624_111554_combined_pre_fix/: async_error_handling.rs  main.rs
yoshi/backups/20250624_112334_combined_pre_fix/: semanticator.rs
yoshi/backups/20250624_112335_combined_pre_fix/: lib.rs
yoshi/backups/20250624_112654_combined_pre_fix/: flawless.rs  mod copy.rs
yoshi/backups/20250624_112655_combined_pre_fix/: mod.rs
yoshi/backups/20250624_112656_combined_pre_fix/: demo_auto_fix.rs
yoshi/docs/: AutofixBugTracker.md
yoshi/examples/: advanced_error_handling.rs  async_error_handling.rs  autocorrection_showcase.rs  backup_recovery_demo.rs  basic_error_handling.rs  complete_autocorrection.rs  database_operations.rs  demo_auto_fix.rs  err.rs  expert_error_handling.rs  lsp_server_showcase.rs  simple_migration.rs  test_auto_docs.rs  test_yopost_macro.rs  test_yoshiautorust.rs  web_server_error_handling.rs
yoshi/src/: lib.rs  main.rs
yoshi/src/auto_fix/: auto_docs.rs  auto_fix.txt  backup_manager.rs  flawless copy.rs  flawless.rs  mod copy.rs  mod.rs  no_std_compat.rs  semanticator.rs  (+1 more)
yoshi/tests/: backup_recovery_tests.rs  clippy_fix_tests.rs  facade_exports_test.rs  integration_doctests.rs  integration_tests.rs  property_tests.rs  real_auto_correction_integration.rs  real_trigger_integration.rs  test_autofix_macro.rs  test_macro.rs  test_serde_integration.rs  test_yopost_macro.rs  test_yoshi_af_export.rs  unit_tests.rs
(+85 files in other folders)
