[workspace]
resolver = "2"

# ── member crates ─────────────────────────────────────────────────────────────
members = [
    "yoshi",        # façade
    "yoshi-derive", # procedural macros
    "yoshi-std",    # core engine
]

# exclude the benches crate from publishing
exclude = ["yoshi-benches"]

# ── shared build profiles ─────────────────────────────────────────────────────
[profile.dev]
opt-level = 1
codegen-units = 4
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
panic = "unwind"

[profile.dev.package."yoshi-std"]
opt-level = 2 # hot crate even in dev

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols" # keep back-traces smaller
rpath = false

[profile.release-with-debug]
inherits = "release"
debug = 1            # line tables for perf tools
strip = "none"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "thin"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
overflow-checks = false

[profile.test]
opt-level = 1
debug = true
overflow-checks = true
incremental = true

# ── runtime-only workspace deps ───────────────────────────────────────────────
[workspace.dependencies]
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }

# ── clippy policy shared by every crate ───────────────────────────────────────
[workspace.lints.clippy]
all = { level = "allow", priority = -1 }        # Temporarily allow all for zero warnings
correctness = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
non_std_lazy_statics = "allow"                  # Allow LazyLock deprecation warnings
doc_lazy_continuation = "allow"                 # Allow doc formatting issues
doc_markdown = "allow"                          # Allow doc markdown issues
needless_raw_string_hashes = "allow"            # Allow raw string formatting
struct_field_names = "allow"                    # Allow field naming patterns
missing_docs_in_private_items = "allow"         # Allow missing private docs
cast_precision_loss = "allow"                   # Allow precision loss in benchmarks
indexing_slicing = "allow"                      # Allow indexing in examples
uninlined_format_args = "allow"                 # Allow format string patterns
too_many_lines = "allow"                        # Allow long functions in benchmarks

# ── PERMANENT ARCHITECTURE PROTECTION ─────────────────────────────────────────
# ⚠️ CRITICAL: DO NOT REMOVE THESE ALLOWS - THEY PROTECT ESSENTIAL ARCHITECTURE
unnecessary_wraps = "allow"                     # REQUIRED: Error handling system needs Result wrappers
needless_pass_by_value = "allow"               # REQUIRED: Some functions need owned values for architecture
single_match_else = "allow"                    # REQUIRED: Match patterns are clearer than if-let in error handling
manual_let_else = "allow"                      # REQUIRED: Manual patterns are more explicit in error correction
match_wildcard_for_single_variants = "allow"   # REQUIRED: Wildcard matches are intentional in error strategies
ptr_arg = "allow"                              # REQUIRED: Vec parameters are needed for certain correction strategies
