[package]
name = "yoshi-analyzer"
version = "0.1.6"
edition = "2021"
rust-version = "1.87"
authors = ["Lord Xyn <LordXyn@proton.me>"]
repository = "https://github.com/arcmoonstudios/yoshi"
license = "MIT OR Apache-2.0"
description = "ML-powered analyzer for the Yoshi error handling framework"
keywords = ["error", "analyzer", "ml", "yoshi", "code-analysis"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
syn = { version = "2.0.66", features = [
    "full",
    "parsing",
    "extra-traits",
    "visit",
] }
quote = "1.0.36"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
walkdir = "2.5.0"
regex = "1.10.4"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
tabled = "0.15.0"

# Yoshi framework integration - the pride pieces!
yoshi-core = { path = "../yoshi-core" }
yoshi-std = { path = "../yoshi-std" }
yoshi-derive = { path = "../yoshi-derive" }
yoshi-deluxe = { path = "../yoshi-deluxe" }

# ML/AI capabilities for strategy generation
candle-core = "0.8.1"
candle-nn = "0.8.1"
candle-transformers = "0.8.1"
tokenizers = "0.19.1"
hf-hub = "0.3.2"

# Advanced analysis capabilities
tree-sitter = "0.24.4"
tree-sitter-rust = "0.23"
petgraph = "0.6.4"
rayon = "1.10.0"
dashmap = "6.0"
once_cell = "1.19.0"

# Performance and caching
lru = "0.12.3"
parking_lot = "0.12.3"
proc-macro2 = "1.0.79"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }

[[bin]]
name = "yoshi-analyzer"
path = "src/main.rs"
