# yoshi-core/Cargo.toml
[package]
name = "yoshi-core"
version = "0.1.6"
edition = "2021"
rust-version = "1.87"                                                                            # MSRV
authors = ["Lord Xyn <LordXyn@proton.me>"]
repository = "https://github.com/arcmoonstudios/yoshi-core"
license = "MIT OR Apache-2.0"
description = "Core error handling types and traits for the Yoshi ecosystem (no_std compatible)"
keywords = ["error", "error-handling", "result", "yoshi", "no-std-only"]
categories = ["development-tools", "rust-patterns", "api-bindings"]

[dependencies]
# Serialization (optional)
serde = { version = "1.0.219", features = [
    "derive",
    "alloc",
], optional = true, default-features = false }

# Async runtime (optional)
tokio = { version = "1.42.0", optional = true, default-features = false, features = [
    "sync",
] }

[features]
default = ["alloc", "std", "serde", "tokio"]

# Core features
alloc = []
std = ["alloc"]

# Serialization support
serde = ["dep:serde", "alloc"]

# Async runtime support
tokio = ["dep:tokio", "std"]

# Development and testing features
testing = []

[dev-dependencies]
# For testing serde functionality
serde_json = "1.0.140"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
