[package]
name = "yoshi-core"
version = "0.1.6"
edition = "2021"
rust-version = "1.87"
authors = [ "Lord Xyn <LordXyn@proton.me>",]
repository = "https://github.com/arcmoonstudios/yoshi-core"
license = "MIT OR Apache-2.0"
description = "Core error handling types and traits for the Yoshi ecosystem (no_std compatible)"
keywords = [ "error", "error-handling", "result", "yoshi", "no-std-only",]
categories = [ "development-tools", "rust-patterns", "api-bindings",]

[dependencies]
log = "0.4"

[features]
default = [ "alloc", "std", "serde", "tokio",]
alloc = []
std = [ "alloc",]
serde = [ "dep:serde", "alloc",]
tokio = [ "dep:tokio", "std",]
testing = []

[dev-dependencies]
serde_json = "1.0.140"
env_logger = "0.10"

[dependencies.serde]
version = "1.0.219"
features = [ "derive", "alloc",]
optional = true
default-features = false

[dependencies.tokio]
version = "1.45.1"
optional = true
default-features = false
features = [ "sync",]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs",]
