[package]
name = "yoshi-derive"
version = "0.1.6"
edition = "2021"
rust-version = "1.75.0"
authors = ["Lord Xyn <LordXyn@proton.me>"]
repository = "https://github.com/arcmoonstudios/yoshi"
license = "MIT OR Apache-2.0"
description = "Sophisticated procedural macro for deriving Yoshi error types with intelligent auto-inference and LSP integration."
keywords = ["proc-macro", "error", "derive", "error-handling", "yoshi"]
categories = ["development-tools", "rust-patterns"]
readme = "README.md"

[dependencies]
# Core proc-macro dependencies
darling = "0.20.11"
proc-macro2 = "1.0.95"
quote = "1.0.40"

# Additional proc-macro dependencies
syn = { version = "2.0.101", features = ["full", "extra-traits", "derive"] }

# Integration with yoshi-std for conversion implementations
yoshi-std = { version = "0.1.6", path = "../yoshi-std" }

[features]
default = ["std"]

# Standard library support (enabled by default)
std = []

# Enable performance optimizations for large enums
optimize-large = []

[lib]
proc-macro = true

# docs.rs configuration
[package.metadata.docs.rs]
rustc-args = ["--cap-lints=warn"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
# Proc-macro testing framework
trybuild = "1.0.105"
pretty_assertions = "1.4.1"
