[package]
name = "yoshi-derive"
version = "0.1.6"
edition = "2021"
rust-version = "1.87.0"
authors = ["Lord Xyn <LordXyn@proton.me>"]
repository = "https://github.com/arcmoonstudios/yoshi"
license = "MIT OR Apache-2.0"
description = "Sophisticated procedural macro for deriving Yoshi error types with intelligent auto-inference and LSP integration."
keywords = ["proc-macro", "error", "derive", "error-handling", "yoshi"]
categories = ["development-tools", "rust-patterns"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.11"
dashmap = "6.1.0"
proc-macro2 = "1.0.95"
once_cell = "1.21.3"
quote = "1.0.40"
parking_lot = "0.12"
ahash = "0.8.12"
hashbrown = "0.15.4"
tracing = { version = "0.1.39", features = ["attributes"] }
const-fnv1a-hash = "1.1.0"
crossbeam-queue = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
convert_case = "0.6"

futures = { version = "0.3", optional = true }
tokio = { version = "1.0", features = [
    "rt",
    "sync",
    "macros",
], optional = true }

[dev-dependencies]
serde_json = "1.0.140"
pretty_assertions = "1.4.1"
paste = "1.0.15"
env_logger = "0.10"

[features]
default = [
    "std",
    "auto-optimization",
    "serde",
    "rayon",
    "optimize-large",
    "compile-fail-tests",
    "full-testing",
]
std = ["yoshi-core/std"]
rayon = ["dep:rayon"]
optimize-large = []
auto-optimization = []
serde = ["dep:serde"]
compile-fail-tests = ["trybuild"]
full-testing = []
concurrent = ["futures", "tokio"]
optimization-metrics = []

[dependencies.rayon]
version = "1.10.0"
optional = true

[dependencies.syn]
version = "2.0.103"
features = ["full", "extra-traits", "derive", "visit", "visit-mut"]

[dependencies.yoshi-core]
version = "0.1.6"
path = "../yoshi-core"
features = ["alloc"]


[dependencies.trybuild]
version = "1.0.105"
optional = true

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
optional = true

[dev-dependencies.tokio]
version = "1.45"
features = ["full"]

[dev-dependencies.yoshi-core]
path = "../yoshi-core"

[package.metadata.docs.rs]
rustc-args = ["--cap-lints=warn"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[[test]]
name = "diagnostic_test"
path = "tests/diagnostic_test.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "compilation_tests"
path = "tests/compilation_tests.rs"

[[test]]
name = "error_handling_tests"
path = "tests/error_handling_tests.rs"

[[test]]
name = "test_runner"
path = "tests/test_runner.rs"

[[test]]
name = "derive_test"
path = "tests/derive_test.rs"

[[test]]
name = "autofix_trigger_integration"
path = "tests/autofix_trigger_integration.rs"

[[test]]
name = "compile_fail_tests"
path = "tests/compile_fail_tests.rs"
required-features = ["compile-fail-tests"]
