[package]
name = "yoshi-std"
version = "0.1.6"
edition = "2021"
rust-version = "1.87.0"
authors = ["Lord Xyn <LordXyn@proton.me>"]
repository = "https://github.com/arcmoonstudios/yoshi"
license = "MIT OR Apache-2.0"
description = "Core, std-only error type for the Yoshi framework."
keywords = ["error", "error-handling", "yoshi", "std-only", "no-std"]
categories = ["development-tools", "rust-patterns"]

[features]
default = ["std", "derive", "serde", "tracing", "async"]
derive = ["yoshi-core/alloc", "dep:yoshi-derive"]
serde = ["dep:serde", "dep:serde_json", "yoshi-core/serde"]
std = ["yoshi-core/std"]
tracing = ["dep:tracing"]
async = ["dep:tokio"]
tokio = ["dep:tokio"]
async-std = []
serde_json = ["dep:serde_json"]
simd-optimized = []
lsp-integration = []

[lib]
name = "yoshi_std"
path = "src/lib.rs"

[dev-dependencies]
env_logger = "0.10"

[dependencies.yoshi-core]
path = "../yoshi-core"
version = "0.1.6"
default-features = false

[dependencies.serde]
version = "1.0.219"
optional = true
features = ["derive"]

[dependencies.tokio]
version = "1.45.1"
optional = true
features = ["time", "fs", "io-util", "net", "rt", "sync", "macros"]

[dependencies.serde_json]
version = "1.0.140"
optional = true

[dependencies.tracing]
version = "0.1.41"
optional = true

[dependencies.tracing-subscriber]
version = "0.3.19"
optional = true
features = ["env-filter", "fmt"]

[dependencies.miette]
version = "7.6.0"
optional = true

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.sha2]
version = "0.10"

[dependencies.regex]
version = "1.10"

[dependencies.syn]
version = "2.0"
features = ["full", "visit", "extra-traits"]

[dependencies.quote]
version = "1.0"

[dependencies.walkdir]
version = "2.5"

[dependencies.anyhow]
version = "1.0"

[dependencies.yoshi-derive]
path = "../yoshi-derive"
version = "0.1.6"
optional = true

[package.metadata.docs.rs]
features = ["std", "serde", "tracing"]
no-default-features = false
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cap-lints=warn"]
targets = ["x86_64-unknown-linux-gnu"]
default-target = "x86_64-unknown-linux-gnu"
